--- a/projects/index.html
+++ b/projects/index.html
@@ -40,9 +40,15 @@
   </style>
 </head>
 <body class="flex justify-center flex-1 p-0 m-0 overflow-hidden md:h-screen" style="background-color: #DFDFDF;">
+  <div id="curtain" class="absolute flex flex-col items-center justify-center w-screen h-screen bg-[#1446E7] z-50 transition-all animate-curtain-up origin-top">
+    <img class="mx-auto top-[50vh] mt-[-60px] md:mt-0 mb-2" src="../assets/matmac-light.svg" width="101" height="17" alt="Matmac Portfolio">
+    <div class="w-[100px] overflow-hidden">
+      <div class="h-[1px] bg-white w-[100px] transition-all animate-slide-x origin-left"></div>
+    </div>
+  </div>
   <header class="fixed top-0 h-[60px] md:h-[100px] flex items-center flex-row px-6 md:px-12 justify-between w-screen z-10">
     <h1 class="z-[45]"><a href="/"><img src="../assets/logo-matmac.svg" width="100" height="25" alt="Matmac - Design Manager"></a></h1>
-    <nav role="navigation" class="hidden md:flex">
+    <nav id="desktop-nav" role="navigation" class="hidden md:flex">
       <a class="text-base no-underline font-regular border-b border-[#1446E7] text-[#1446E7]" href="../projects/" style="font-family: Inter, sans-serif;">Projects</a>
       <a class="text-[#39474E] text-base no-underline font-regular mx-6 hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="../about/" style="font-family: Inter, sans-serif;">About</a>
       <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
@@ -68,7 +74,7 @@
       </li>
       <li class="ml-2 mr-4 md:mr-12 snap-center md:ml-0">
         <div class="w-[80vw] md:w-[30vw] h-[320px] md:h-[450px] flex">
-          <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]" data-tilt>
+          <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
             <a class="hidden md:flex" href="./helzi/"><img class="object-cover object-left-top" src="../assets/projects-slides/helzi.jpg" alt="Helzi project"></a>
             <a class="flex md:hidden" href="https://www.figma.com/file/q0kan3jZ1fNHzxcd69WeBT/Matmac---Helzi?node-id=0%3A1" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/helzi.jpg" alt="Helzi project"></a>
           </div>
@@ -119,7 +125,7 @@
           <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
             <a class="hidden md:flex" href="./holafly/"><img class="object-cover object-left-top" src="../assets/projects-slides/holafly.jpg" alt="Holafly project"></a>
             <a class="flex md:hidden" href="https://www.figma.com/file/d5xE3bQnPSkxgGFMTsqUfm/Matmac---Holafly?node-id=1%3A157" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/holafly.jpg" alt="Holafly project"></a>
-          </div>
+          </v>
         </div>
       </li>
       <li class="mr-4 md:mr-12 snap-center">
@@ -152,7 +158,22 @@
     tailwind.config = {
       theme: {
         extend: {
+          transitionProperty: {
+            'line-height': 'line-height',
+          },
           keyframes: {
+            'curtain-down': {
+              '0%': { transform: 'translateY(-100%)' },
+              '100%': { transform: 'translateY(0)' },
+            },
+            'curtain-up': {
+              '0%': { transform: 'translateY(0)' },
+              '100%': { transform: 'translateY(-100%)' },
+            },
+            'slide-x': {
+              '0%': { transform: 'translateX(-100%)' },
+              '100%': { transform: 'translateX(100%)' },
+            },
             'rotate-hamburguer': {
               'from': { transform: 'rotate(0deg)' },
               'to': { transform: 'rotate(45deg) translate(1px, -4px)' },
@@ -163,12 +184,38 @@
             }
           },
           animation: {
+            'curtain-up': 'curtain-up 0.6s cubic-bezier(.70,0,.35,1) 3s forwards',
+            'curtain-down': 'curtain-down 0.6s cubic-bezier(.70,0,.35,1) forwards',
+            'slide-x': 'slide-x 1s cubic-bezier(.70,0,.35,1) infinite',
             'rotate-hamburguer': 'rotate-hamburguer 0.2s cubic-bezier(.70,0,.35,1) forwards',
             'rotate-hamburguer-inverse': 'rotate-hamburguer-inverse 0.2s cubic-bezier(.70,0,.35,1) forwards'
           }
         }
       }
     }
+
+    document.addEventListener("DOMContentLoaded", function(){
+      var replacers = document.querySelectorAll('[data-replace]');
+      for(var i=0; i<replacers.length; i++){
+        let replaceClasses = JSON.parse(replacers[i].dataset.replace.replace(/'/g, '"'));
+        Object.keys(replaceClasses).forEach(function(key) {
+          replacers[i].classList.remove(key);
+          replacers[i].classList.add(replaceClasses[key]);
+        });
+      }
+    });
+    document.querySelectorAll('#desktop-nav a').forEach(function(el) {
+      el.addEventListener('click', function(e) {
+        e.preventDefault();
+        var newLocation = this.href;
+        document.getElementById('curtain').classList.remove('animate-curtain-up');
+        document.getElementById('curtain').classList.add('animate-curtain-down');
+        setTimeout(function() {
+          window.location = newLocation;
+        }, 610)
+      });
+    });
+
     VanillaTilt.init(document.querySelectorAll('.rounded-lg'), {
       scale: 1.05,
       speed: 3000,
