--- a/about/index.html
+++ b/about/index.html
@@ -37,10 +37,10 @@
   </div>
   <header class="fixed top-0 h-[60px] md:h-[100px] flex items-center flex-row px-6 md:px-12 justify-between w-screen z-10">
     <h1 class="z-[45]"><a href="/"><img src="../assets/logo-matmac.svg" width="100" height="25" alt="Matmac - Design Manager"></a></h1>
-    <nav id="desktop-nav" role="navigation" class="hidden md:flex">
+    <nav role="navigation" class="hidden md:flex">
       <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="../projects/" style="font-family: Inter, sans-serif;">Projects</a>
       <a class="text-base no-underline font-regular border-b border-[#1446E7] mx-6 text-[#1446E7]" href="../about/" style="font-family: Inter, sans-serif;">About</a>
-      <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
+      <a id="contact" class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
     </nav>
     <nav class="md:hidden" role="navigation">
       <div class="flex flex-col items-center justify-center w-[40px] h-[32px]">
@@ -51,7 +51,7 @@
         <div class="fixed inset-0 bg-[#dfdfdf] shadow-xl top-0 flex flex-col translate-x-[-120%] duration-500 items-center justify-center transition-all peer-checked:translate-x-0">
           <a class="text-[#39474E] text-base no-underline font-regular text-2xl hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="../projects" style="font-family: Inter, sans-serif;">Projects</a>
           <a class="text-base no-underline font-regular text-2xl my-12 border-b border-[#1446E7] text-[#1446E7]" href="../about" style="font-family: Inter, sans-serif;">About</a>
-          <a class="text-[#39474E] text-base no-underline font-regular text-2xl hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
+          <a id="contact" class="text-[#39474E] text-base no-underline font-regular text-2xl hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
         </div>
       </div>
     </nav>
@@ -126,7 +126,7 @@
         });
       }
     });
-    document.querySelectorAll('#desktop-nav a, h1 a').forEach(function(el) {
+    document.querySelectorAll('nav a:not(#contact), h1 a:not(#contact)').forEach(function(el) {
       el.addEventListener('click', function(e) {
         e.preventDefault();
         var newLocation = this.href;
