--- a/projects/linkedin/index.html
+++ b/projects/linkedin/index.html
@@ -29,12 +29,31 @@
   <meta property="twitter:image" content="https://matmac.design/assets/bg-social-matmac.png">
 </head>
 <body class="flex justify-center flex-1 h-screen p-0 m-0" style="background-color: #DFDFDF;">
-  <header class="fixed top-0 h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
-    <a href="/"><img src="../../assets/logo-matmac.svg" alt="Matmac - Design Manager"></a>
-    <nav role="navigation">
-      <a class="text-base font-regular border-b border-[#1446E7] text-[#1446E7]" href="../../projects" style="font-family: Inter, sans-serif;">Projects</a>
-      <a class="text-[#39474E] text-base no-underline font-regular mx-6 hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="/about" style="font-family: Inter, sans-serif;">About</a>
-      <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
+  <div id="curtain" class="absolute flex flex-col items-center justify-center w-screen h-screen bg-[#1446E7] z-50 transition-all animate-curtain-up origin-top">
+    <img class="mx-auto top-[50vh] mt-[-60px] md:mt-0 mb-2" src="../../assets/matmac-light.svg" width="101" height="17" alt="Matmac Portfolio">
+    <div class="w-[100px] overflow-hidden">
+      <div class="h-[1px] bg-white w-[100px] transition-all animate-slide-x origin-left"></div>
+    </div>
+  </div>
+  <header class="fixed top-0 h-[60px] md:h-[100px] flex items-center flex-row px-6 md:px-12 justify-between w-screen z-10">
+    <h1 class="z-[45]"><a href="/"><img src="../../assets/logo-matmac.svg" width="100" height="25" alt="Matmac - Design Manager"></a></h1>
+    <nav role="navigation" class="hidden md:flex">
+      <a class="text-base no-underline font-regular border-b border-[#1446E7] text-[#1446E7]" href="../../projects/" style="font-family: Inter, sans-serif;">Projects</a>
+      <a class="text-[#39474E] text-base no-underline font-regular mx-6 hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="../../about/" style="font-family: Inter, sans-serif;">About</a>
+      <a id="contact" class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
+    </nav>
+    <nav class="md:hidden" role="navigation">
+      <div class="flex flex-col items-center justify-center w-[40px] h-[32px]">
+        <input class="w-[40px] h-[32px] absolute cursor-pointer z-[42] opacity-0 peer" type="checkbox" />
+        <span class="w-[32px] h-0.5 relative z-[1] bg-slate-400 flex origin-top-left peer-checked:animate-rotate-hamburguer"></span>
+        <span class="w-[32px] h-0.5 relative z-[1] my-1.5 bg-slate-400 flex peer-checked:animate-rotate-hamburguer-inverse"></span>
+        <span class="w-[32px] h-0.5 relative z-[1] bg-slate-400 flex origin-[0%_100%] origin-top transform-all peer-checked:opacity-0"></span>
+        <div class="fixed inset-0 bg-[#dfdfdf] shadow-xl top-0 flex flex-col translate-x-[-120%] duration-500 items-center justify-center transition-all peer-checked:translate-x-0">
+          <a class="text-base no-underline font-regular text-2xl border-b border-[#1446E7] text-[#1446E7]" href="../projects" style="font-family: Inter, sans-serif;">Projects</a>
+          <a class="text-[#39474E] text-base no-underline font-regular text-2xl my-12 hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="../about" style="font-family: Inter, sans-serif;">About</a>
+          <a id="contact" class="text-[#39474E] text-base no-underline font-regular text-2xl hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
+        </div>
+      </div>
     </nav>
   </header>
   <iframe style="border: 0 none; display: block; background: #e5e5e5;" width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FhaTt89jgwaNtXlckUNBOfV%2FMatmac---Linkedin%3Fpage-id%3D0%253A1%26node-id%3D1%253A2%26viewport%3D241%252C48%252C0.61%26scaling%3Dmin-zoom%26hide-ui%3D1" allowfullscreen allowtransparency="true"></iframe>
@@ -51,6 +70,73 @@
       </span>
     </div>
   </footer>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          transitionProperty: {
+            'line-height': 'line-height',
+          },
+          keyframes: {
+            'curtain-down': {
+              '0%': { transform: 'translateY(-100%)' },
+              '100%': { transform: 'translateY(0)' },
+            },
+            'curtain-up': {
+              '0%': { transform: 'translateY(0)' },
+              '100%': { transform: 'translateY(-100%)' },
+            },
+            'slide-x': {
+              '0%': { transform: 'translateX(-100%)' },
+              '100%': { transform: 'translateX(100%)' },
+            },
+            'spin-reverse': {
+              'from': { transform: 'rotate(0deg)' },
+              'to': { transform: 'rotate(360deg)' },
+            },
+            'rotate-hamburguer': {
+              'from': { transform: 'rotate(0deg)' },
+              'to': { transform: 'rotate(45deg) translate(1px, -4px)' },
+            },
+            'rotate-hamburguer-inverse': {
+              'from': { transform: 'rotate(0deg) translate(0, 0)' },
+              'to': { transform: 'rotate(-45deg) translate(-2px, -1px)' },
+            }
+          },
+          animation: {
+            'curtain-up': 'curtain-up 0.6s cubic-bezier(.70,0,.35,1) 3s forwards',
+            'curtain-down': 'curtain-down 0.6s cubic-bezier(.70,0,.35,1) forwards',
+            'slide-x': 'slide-x 1s cubic-bezier(.70,0,.35,1) infinite',
+            'spin-reverse': 'spin-reverse 10s linear infinite reverse',
+            'rotate-hamburguer': 'rotate-hamburguer 0.2s cubic-bezier(.70,0,.35,1) forwards',
+            'rotate-hamburguer-inverse': 'rotate-hamburguer-inverse 0.2s cubic-bezier(.70,0,.35,1) forwards'
+          }
+        }
+      }
+    }
+
+    document.addEventListener("DOMContentLoaded", function(){
+      var replacers = document.querySelectorAll('[data-replace]');
+      for(var i=0; i<replacers.length; i++){
+        let replaceClasses = JSON.parse(replacers[i].dataset.replace.replace(/'/g, '"'));
+        Object.keys(replaceClasses).forEach(function(key) {
+          replacers[i].classList.remove(key);
+          replacers[i].classList.add(replaceClasses[key]);
+        });
+      }
+    });
+    document.querySelectorAll('nav a:not(#contact), h1 a:not(#contact)').forEach(function(el) {
+      el.addEventListener('click', function(e) {
+        e.preventDefault();
+        var newLocation = this.href;
+        document.getElementById('curtain').classList.remove('animate-curtain-up');
+        document.getElementById('curtain').classList.add('animate-curtain-down');
+        setTimeout(function() {
+          window.location = newLocation;
+        }, 610)
+      });
+    });
+  </script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-FY7BN658HK"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
