wrong path for matmac logo

--- a/projects/flow/index.html
+++ b/projects/flow/index.html
@@ -31,7 +31,7 @@
 </head>
 <body class="flex justify-center flex-1 h-screen p-0 m-0" style="background-color: #DFDFDF;">
   <div id="curtain" class="absolute flex flex-col items-center justify-center w-screen h-screen bg-[#1446E7] z-50 transition-all animate-curtain-up origin-top">
-    <img class="mx-auto top-[50vh] mt-[-60px] md:mt-0 mb-2" src="../assets/matmac-light.svg" width="101" height="17" alt="Matmac Portfolio">
+    <img class="mx-auto top-[50vh] mt-[-60px] md:mt-0 mb-2" src="../../assets/matmac-light.svg" width="101" height="17" alt="Matmac Portfolio">
     <div class="w-[100px] overflow-hidden">
       <div class="h-[1px] bg-white w-[100px] transition-all animate-slide-x origin-left"></div>
     </div>
