add nord project completely, add kausa template

--- a/projects/index.html
+++ b/projects/index.html
@@ -65,6 +65,22 @@
       <li class="ml-2 mr-4 md:mr-12 snap-center md:ml-0">
         <div class="w-[80vw] md:w-[30vw] h-[320px] md:h-[450px] flex">
           <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
+            <a id="desktop-link" class="hidden md:flex" href="./nordhealth/"><img class="object-cover object-left-top" src="../assets/projects-slides/nordhealth.jpg" alt="Nordhealth project"></a>
+            <a class="flex md:hidden" href="https://www.figma.com/file/yP0ZYCDeNhjTOAzgsRgQSi/Matmac---Nord-Design-System?node-id=0%3A1" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/nordhealth.jpg" alt="Nordhealth project"></a>
+          </div>
+        </div>
+      </li>
+      <li class="mr-4 md:mr-12 snap-center hidden">
+        <div class="w-[80vw] md:w-[30vw] h-[320px] md:h-[450px] flex">
+          <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
+            <a id="desktop-link" class="hidden md:flex" href="./kausa/"><img class="object-cover object-left-top" src="../assets/projects-slides/kausa.jpg" alt="Kausa project"></a>
+            <a class="flex md:hidden" href="https://www.figma.com/file/q0kan3jZ1fNHzxcd69WeBT/Matmac---Helzi?node-id=0%3A1" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/Kausa.jpg" alt="Kausa project"></a>
+          </div>
+        </div>
+      </li>
+      <li class="mr-4 md:mr-12 snap-center">
+        <div class="w-[80vw] md:w-[30vw] h-[320px] md:h-[450px] flex">
+          <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
             <a id="desktop-link" class="hidden md:flex" href="./helzi/"><img class="object-cover object-left-top" src="../assets/projects-slides/helzi.jpg" alt="Helzi project"></a>
             <a class="flex md:hidden" href="https://www.figma.com/file/q0kan3jZ1fNHzxcd69WeBT/Matmac---Helzi?node-id=0%3A1" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/helzi.jpg" alt="Helzi project"></a>
           </div>
