--- a/projects/nordhealth/index.html
+++ b/projects/nordhealth/index.html
@@ -56,7 +56,7 @@
       </div>
     </nav>
   </header>
-  <iframe style="border: 0 none; display: block; background: #e5e5e5;" width="100%" height="100%" src="https://www.figma.com/proto/yP0ZYCDeNhjTOAzgsRgQSi/Matmac---Nord-Design-System?page-id=0%3A1&node-id=0%3A1&viewport=706%2C474%2C0.25&scaling=min-zoom%26hide-ui%3D1" allowfullscreen allowtransparency="true"></iframe>
+  <iframe style="border: 0 none; display: block; background: #e5e5e5;" width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https://www.figma.com/proto/yP0ZYCDeNhjTOAzgsRgQSi/Matmac---Nord-Design-System?page-id=0%3A1&node-id=0%3A1&viewport=706%2C474%2C0.25&scaling=min-zoom%26hide-ui%3D1" allowfullscreen allowtransparency="true"></iframe>
   <footer class="fixed bottom-0 w-screen mb-8 px-12 text-[#39474e] text-base flex flex-row justify-between" style="font-family: Inter, sans-serif;">
     <div>
       <a class="text-[#39474E] font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="https://www.linkedin.com/in/matiasbejas/" rel="noopener noreferrer" target="_blank" style="font-family: Inter, sans-serif;">Linkedin</a>
