--- a/projects/index.html
+++ b/projects/index.html
@@ -63,7 +63,7 @@
         <div class="w-[10vw] md:w-[30vw] h-[100px] md:h-[450px]"></div>
       </li>
       <li class="ml-2 mr-4 md:mr-12 snap-center md:ml-0">
-        <div class="w-[80vw] md:w-[40vw] h-[320px] md:h-[450px] flex">
+        <div class="w-[80vw] md:w-[546px] h-[320px] md:h-[450px] flex">
           <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
             <a id="desktop-link" class="hidden md:flex" href="./nordhealth/"><img class="object-cover object-left-top" src="../assets/projects-slides/nordhealth.jpg" alt="Nordhealth project"></a>
             <a class="flex md:hidden" href="https://www.figma.com/file/yP0ZYCDeNhjTOAzgsRgQSi/Matmac---Nord-Design-System?node-id=0%3A1" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/nordhealth.jpg" alt="Nordhealth project"></a>
@@ -71,7 +71,7 @@
         </div>
       </li>
       <li class="mr-4 md:mr-12 snap-center hidden">
-        <div class="w-[80vw] md:w-[40vw] h-[320px] md:h-[450px] flex">
+        <div class="w-[80vw] md:w-[546px] h-[320px] md:h-[450px] flex">
           <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
             <a id="desktop-link" class="hidden md:flex" href="./kausa/"><img class="object-cover object-left-top" src="../assets/projects-slides/kausa.jpg" alt="Kausa project"></a>
             <a class="flex md:hidden" href="https://www.figma.com/file/q0kan3jZ1fNHzxcd69WeBT/Matmac---Helzi?node-id=0%3A1" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/Kausa.jpg" alt="Kausa project"></a>
@@ -79,7 +79,7 @@
         </div>
       </li>
       <li class="mr-4 md:mr-12 snap-center">
-        <div class="w-[80vw] md:w-[40vw] h-[320px] md:h-[450px] flex">
+        <div class="w-[80vw] md:w-[546px] h-[320px] md:h-[450px] flex">
           <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
             <a id="desktop-link" class="hidden md:flex" href="./helzi/"><img class="object-cover object-left-top" src="../assets/projects-slides/helzi.jpg" alt="Helzi project"></a>
             <a class="flex md:hidden" href="https://www.figma.com/file/q0kan3jZ1fNHzxcd69WeBT/Matmac---Helzi?node-id=0%3A1" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/helzi.jpg" alt="Helzi project"></a>
@@ -87,7 +87,7 @@
         </div>
       </li>
       <li class="mr-4 md:mr-12 snap-center">
-        <div class="w-[80vw] md:w-[40vw] h-[320px] md:h-[450px] flex">
+        <div class="w-[80vw] md:w-[546px] h-[320px] md:h-[450px] flex">
           <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
             <a id="desktop-link" class="hidden md:flex" href="./amazon/"><img class="object-cover object-left-top" src="../assets/projects-slides/amazon.jpg" alt="Amazon project"></a>
             <a class="flex md:hidden" href="https://www.figma.com/file/ArPFw4M97em2USi94Z3MYr/Matmac---Amazon?node-id=0%3A1" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/amazon.jpg" alt="Helzi project"></a>
@@ -95,7 +95,7 @@
         </div>
       </li>
       <li class="mr-4 md:mr-12 snap-center">
-        <div class="w-[80vw] md:w-[40vw] h-[320px] md:h-[450px] flex">
+        <div class="w-[80vw] md:w-[546px] h-[320px] md:h-[450px] flex">
           <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
             <a id="desktop-link" class="hidden md:flex" href="./linkedin/"><img class="object-cover object-left-top" src="../assets/projects-slides/linkedin.jpg" alt="Linkedin project"></a>
             <a class="flex md:hidden" href="https://www.figma.com/file/haTt89jgwaNtXlckUNBOfV/Matmac---Linkedin?node-id=0%3A1" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/linkedin.jpg" alt="Helzi project"></a>
@@ -103,7 +103,7 @@
         </div>
       </li>
       <li class="mr-4 md:mr-12 snap-center">
-        <div class="w-[80vw] md:w-[40vw] h-[320px] md:h-[450px] flex">
+        <div class="w-[80vw] md:w-[546px] h-[320px] md:h-[450px] flex">
           <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
             <a id="desktop-link" class="hidden md:flex" href="./sony/"><img class="object-cover object-left-top" src="../assets/projects-slides/sony.jpg" alt="Sony project"></a>
             <a class="flex md:hidden" href="https://www.figma.com/file/fPOEuw9HcxSlBc35O11Dbc/Matmac---Sony?node-id=0%3A1" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/sony.jpg" alt="Helzi project"></a>
@@ -111,7 +111,7 @@
         </div>
       </li>
       <li class="mr-4 md:mr-12 snap-center">
-        <div class="w-[80vw] md:w-[40vw] h-[320px] md:h-[450px] flex">
+        <div class="w-[80vw] md:w-[546px] h-[320px] md:h-[450px] flex">
           <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
             <a id="desktop-link" class="hidden md:flex" href="./posters/"><img class="object-cover object-left-top" src="../assets/projects-slides/posters.jpg" alt="Posters project"></a>
             <a class="flex md:hidden" href="https://www.figma.com/file/NlxvdMWTjb3xzLO6vjYNoJ/Matmac---Posters?node-id=0%3A1" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/posters.jpg" alt="Posters project"></a>
@@ -119,7 +119,7 @@
         </div>
       </li>
       <li class="mr-4 md:mr-12 snap-center">
-        <div class="w-[80vw] md:w-[40vw] h-[320px] md:h-[450px] flex">
+        <div class="w-[80vw] md:w-[546px] h-[320px] md:h-[450px] flex">
           <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
             <a id="desktop-link" class="hidden md:flex" href="./flow/"><img class="object-cover object-left-top" src="../assets/projects-slides/flow.jpg" alt="Flow project"></a>
             <a class="flex md:hidden" href="https://www.figma.com/file/2r8Lrb4xZDS6yfOwxWbOt4/Matmac---Flow?node-id=0%3A1" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/flow.jpg" alt="Flow project"></a>
@@ -127,7 +127,7 @@
         </div>
       </li>
       <li class="mr-4 md:mr-12 snap-center">
-        <div class="w-[80vw] md:w-[40vw] h-[320px] md:h-[450px] flex">
+        <div class="w-[80vw] md:w-[546px] h-[320px] md:h-[450px] flex">
           <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
             <a id="desktop-link" class="hidden md:flex" href="./holafly/"><img class="object-cover object-left-top" src="../assets/projects-slides/holafly.jpg" alt="Holafly project"></a>
             <a class="flex md:hidden" href="https://www.figma.com/file/d5xE3bQnPSkxgGFMTsqUfm/Matmac---Holafly?node-id=1%3A157" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/holafly.jpg" alt="Holafly project"></a>
@@ -135,7 +135,7 @@
         </div>
       </li>
       <li class="mr-4 md:mr-12 snap-center">
-        <div class="w-[80vw] md:w-[40vw] h-[320px] md:h-[450px] flex">
+        <div class="w-[80vw] md:w-[546px] h-[320px] md:h-[450px] flex">
           <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
             <a id="desktop-link" class="hidden md:flex" href="./tradenolimits/"><img class="object-cover object-left-top" src="../assets/projects-slides/tnl.jpg" alt="Tradenolimits project"></a>
             <a class="flex md:hidden" href="https://www.figma.com/file/SZMUHUBvNUBuIkDmB2oiVO/Matmac---Tradenolimits?node-id=0%3A1" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/tnl.jpg" alt="Tradenolimits project"></a>
