update on title, metadata, about page

--- a/projects/flow/index.html
+++ b/projects/flow/index.html
@@ -18,14 +18,14 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://matmac.design">
-  <meta property="og:title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta property="og:title" content="Matias Bejas - Design Manager - UX/UI & Design Systems Expert">
   <meta property="og:description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
   <meta property="og:image" content="https://matmac.design/assets/bg-social-matmac.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://matmac.design">
-  <meta property="twitter:title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta property="twitter:title" content="Matias Bejas - Design Manager - UX/UI & Design Systems Expert">
   <meta property="twitter:description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
   <meta property="twitter:image" content="https://matmac.design/assets/bg-social-matmac.png">
 </head>
