--- a/projects/index.html
+++ b/projects/index.html
@@ -12,20 +12,20 @@
   <script type="text/javascript" src="../plugins/vanilla-tilt.min.js"></script>
   <!-- Primary Meta Tags -->
   <title>Matias Bejas - Projects</title>
-  <meta name="title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta name="title" content="Matias Bejas - Design Manager - UX/UI & Design Systems Expert">
   <meta name="description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://matmac.design">
-  <meta property="og:title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta property="og:title" content="Matias Bejas - Design Manager - UX/UI & Design Systems Expert">
   <meta property="og:description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
   <meta property="og:image" content="https://matmac.design/assets/bg-social-matmac.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://matmac.design">
-  <meta property="twitter:title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta property="twitter:title" content="Matias Bejas - Design Manager - UX/UI & Design Systems Expert">
   <meta property="twitter:description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
   <meta property="twitter:image" content="https://matmac.design/assets/bg-social-matmac.png">
 </head>
