--- a/about/index.html
+++ b/about/index.html
@@ -11,20 +11,20 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Primary Meta Tags -->
   <title>Matias Bejas - About</title>
-  <meta name="title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta name="title" content="Matias Bejas - Design Manager - UX/UI & Design Systems Expert">
   <meta name="description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://matmac.design">
-  <meta property="og:title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta property="og:title" content="Matias Bejas - Design Manager - UX/UI & Design Systems Expert">
   <meta property="og:description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
   <meta property="og:image" content="https://matmac.design/assets/bg-social-matmac.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://matmac.design">
-  <meta property="twitter:title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta property="twitter:title" content="Matias Bejas - Design Manager - UX/UI & Design Systems Expert">
   <meta property="twitter:description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
   <meta property="twitter:image" content="https://matmac.design/assets/bg-social-matmac.png">
 </head>
@@ -56,12 +56,12 @@
       </div>
     </nav>
   </header>
-  <section class="flex flex-col items-center justify-center flex-1 w-screen h-screen overflow-hidden">
-    <div class="fixed w-[85vw] md:w-[65vw] flex flex-col z-[1] mt-[-60px]">
-      <p class="text-[25px] md:text-[55px] leading-tight text-[#39474E] mb-10 font-semibold" style="font-family: Inter, sans-serif;">Hello! I'm Matias Bejas, a <span class="border-b border-[#1446E7] text-[#1446E7]">Designgineer</span> from Argentina currently living in <span class="border-b border-[#1446E7] text-[#1446E7]">Madrid</span> working as <span class="border-b border-[#1446E7] text-[#1446E7]">Design Lead</span>.</p>
-      <p class="text-[25px] md:text-[55px] leading-tight text-[#39474E] ml-16 font-semibold" style="font-family: Inter, sans-serif;">With 20+ years of experience I specialize in <span class="border-b border-[#1446E7] text-[#1446E7]">interface design</span>, <span class="border-b border-[#1446E7] text-[#1446E7]">UX/UI</span>, <span class="border-b border-[#1446E7] text-[#1446E7]">holistic design systems</span> & <span class="border-b border-[#1446E7] text-[#1446E7]">front-end/back-end development</span>.</p>
+  <section class="flex flex-col justify-center flex-1 w-screen h-screen overflow-hidden">
+    <div class="fixed w-[90vw] md:w-[50vw] flex flex-col z-[1] mt-[-60px] pl-6 md:pl-24">
+      <p class="text-[25px] md:text-[55px] leading-tight text-[#39474E] mb-10 font-medium" style="font-family: Inter, sans-serif;">Hello! I'm Matias Bejas, a <span class="text-[#1446E7] font-semibold">Designgineer</span> from Argentina currently living in <span class="text-[#1446E7] font-semibold">Madrid</span> working as <span class="text-[#1446E7] font-semibold">Design Manager</span>.</p>
+      <p class="text-[25px] md:text-[55px] leading-tight text-[#39474E] ml-16 font-medium" style="font-family: Inter, sans-serif;">With 22+ years of experience I specialize in <span class="text-[#1446E7] font-semibold">UX/UI</span>, <span class="text-[#1446E7] font-semibold">holistic design systems</span> & <span class="text-[#1446E7] font-semibold">front-end/back-end development</span>.</p>
     </div>
-    <img class="absolute object-cover w-screen h-screen opacity-30 md:opacity-50 saturate-50 contrast-125" src="../assets/matmac-2022.jpg" alt="Matmac"/>
+    <img class="absolute object-cover w-screen h-screen" src="../assets/matmac-2022-a.jpg" alt="Matmac"/>
   </section>
   <footer class="fixed bottom-0 w-screen mb-8 px-6 md:px-12 text-[#39474e] text-xs md:text-base font-regular flex flex-row justify-between" style="font-family: Inter, sans-serif;">
     <div>
