--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
   <!-- Primary Meta Tags -->
-  <title>Matias Bejas - Design Lead - UX/UI Expert</title>
-  <meta name="title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <title>Matias Bejas - Design Manager - UX/UI & Design Systems Expert</title>
+  <meta name="title" content="Matias Bejas - Design Manager - UX/UI & Design Systems Expert">
   <meta name="description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://matmac.design">
-  <meta property="og:title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta property="og:title" content="Matias Bejas - Design Manager - UX/UI & Design Systems Expert">
   <meta property="og:description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
   <meta property="og:image" content="https://matmac.design/assets/bg-social-matmac.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://matmac.design">
-  <meta property="twitter:title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta property="twitter:title" content="Matias Bejas - Design Manager - UX/UI & Design Systems Expert">
   <meta property="twitter:description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
   <meta property="twitter:image" content="https://matmac.design/assets/bg-social-matmac.png">
 </head>
@@ -130,8 +130,8 @@
       <img class="absolute top-2 md:top-0 -right-1 md:right-0 z-[2] animate-spin-reverse w-[90px] md:w-[127px]" src="assets/available.svg" alt="Matmac - Available for freelance and contract work" />
       <img class="relative z-[1] mt-10 w-[200px] h-[200px] md:w-[300px] md:h-[300px]" src="assets/matmacintosh.png" alt="Matmac Portfolio"/>
     </div>
-    <h2 class="max-w-[85vw] md:max-w-[50vw] text-center mt-[-28px] md:mt-[-45px] leading-5 tracking-tight text-[#39474E] font-semibold text-[32px] md:text-[70px] transform transition-all translate-y-6 opacity-0 duration-[1000ms] delay-[3000ms]" style="font-family: Inter, sans-serif;" data-replace='{ "translate-y-6": "translate-y-0", "leading-5": "leading-none", "opacity-0": "opacity-1" }'>I'm Matias Bejas, Design Lead & UX/UI Expert</h2>
-    <h3 class="max-w-[85vw] md:max-w-[50vw] text-center mt-8 leading-none text-[#8A9AA3] md:text-[20px] sm:text-[20px] font-regular transform transition-all translate-y-8 opacity-0 duration-[1000ms] delay-[3500ms]" style="font-family: Inter, sans-serif;" data-replace='{ "translate-y-8": "translate-y-0", "leading-5": "leading-none", "opacity-0": "opacity-1" }'>I help industry leaders & startups create remarkable user-driven experiences</h3>
+    <h2 class="max-w-[85vw] md:max-w-[50vw] text-center mt-[-28px] md:mt-[-45px] leading-5 tracking-tight text-[#39474E] font-semibold text-[32px] md:text-[70px] transform transition-all translate-y-6 opacity-0 duration-[1000ms] delay-[3000ms]" style="font-family: Inter, sans-serif;" data-replace='{ "translate-y-6": "translate-y-0", "leading-5": "leading-none", "opacity-0": "opacity-1" }'>I'm Matias Bejas, <br>UX/UI & Design Systems Expert</h2>
+    <h3 class="max-w-[85vw] md:max-w-[50vw] text-center mt-8 leading-none text-[#8A9AA3] md:text-[20px] sm:text-[20px] font-regular transform transition-all translate-y-8 opacity-0 duration-[1000ms] delay-[3500ms]" style="font-family: Inter, sans-serif;" data-replace='{ "translate-y-8": "translate-y-0", "leading-5": "leading-none", "opacity-0": "opacity-1" }'>I help companies & startups create remarkable design systems and user-driven experiences</h3>
   </section>
   <footer class="fixed bottom-0 w-screen mb-8 px-6 md:px-12 text-[#39474e] text-xs md:text-base font-regular flex flex-row justify-between" style="font-family: Inter, sans-serif;">
     <div>
