about page update

--- a/about/index.html
+++ b/about/index.html
@@ -58,8 +58,9 @@
   </header>
   <section class="flex flex-col justify-center flex-1 w-screen h-screen overflow-hidden">
     <div class="fixed w-[90vw] md:w-[50vw] flex flex-col z-[1] mt-[-60px] pl-6 md:pl-24">
-      <p class="text-[25px] md:text-[55px] leading-tight text-[#39474E] mb-10 font-medium" style="font-family: Inter, sans-serif;">Hello! I'm Matias Bejas, a <span class="text-[#1446E7] font-semibold">Designgineer</span> from Argentina currently living in <span class="text-[#1446E7] font-semibold">Madrid</span> working as <span class="text-[#1446E7] font-semibold">Design Manager</span>.</p>
-      <p class="text-[25px] md:text-[55px] leading-tight text-[#39474E] ml-16 font-medium" style="font-family: Inter, sans-serif;">With 22+ years of experience I specialize in <span class="text-[#1446E7] font-semibold">UX/UI</span>, <span class="text-[#1446E7] font-semibold">holistic design systems</span> & <span class="text-[#1446E7] font-semibold">front-end/back-end development</span>.</p>
+      <p class="text-[25px] md:text-[35px] leading-tight text-[#39474E] mb-10 font-medium" style="font-family: Inter, sans-serif;">Hello! I'm Matias Bejas, a <span class="text-[#1446E7] font-semibold">Designgineer</span> from Argentina currently living in <span class="text-[#1446E7] font-semibold">Madrid</span> working as <span class="text-[#1446E7] font-semibold">Design Manager</span>.</p>
+      <p class="text-[25px] md:text-[35px] leading-tight text-[#39474E] ml-16 font-medium" style="font-family: Inter, sans-serif;">With 22+ years of experience I specialize in <span class="text-[#1446E7] font-semibold">UX/UI</span>, <span class="text-[#1446E7] font-semibold">holistic design systems</span> & <span class="text-[#1446E7] font-semibold">front-end/back-end development</span>.</p>
+      <a class="no-underline px-6 py-4 text-white bg-[#1446E7] inline-flex rounded-lg mt-12 text-2xl self-start" href="https://www.figma.com/file/pOaJS5IUaSEGTo6NtGA8Ip/Matias-Bejas-Resume?node-id=0%3A1&t=NjH7DW8P05tM6wO7-1" target="_blank">View Resume</a>
     </div>
     <img class="absolute object-cover w-screen h-screen" src="../assets/matmac-2022-a.jpg" alt="Matmac"/>
   </section>
